--- a/submitNewPassWord.html
+++ b/submitNewPassWord.html
@@ -33,7 +33,7 @@
         <meta name="google-signin-client_id"
             content="791903473675-ujan66vn97e2ebkgqssu35uvv4elp6vs.apps.googleusercontent.com">
         <script src="./Assets/JS/notification.js"></script>
-        <script src="./Assets/JS/forgetPassWord.js"></script>
+        <script src="./Assets/JS/submitPassWord_f.js"></script>
 
     </div>
 </head>
@@ -58,15 +58,11 @@
                     <a class="nav-link " href="/signup.html">SignUp</a>
                 </li>
             </ul>
-
         </div>
-
     </nav>
 
 </header>
-
 <section>
-
     <div class="signin-form">
         <form>
             <p class="hint-text">Enter your new password</p>
@@ -74,8 +70,9 @@
                 <input type="password" class="form-control input-lg" name="password" id="password"
                     placeholder="Password" required="required">
             </div>
+            <div id="alert"></div>
             <div class="form-group">
-                <button type="button" id="submitNewPassWord" class="btn btn-success btn-lg btn-block signup-btn" onclick="submitNewPassWord()">Submit</button>
+                <button type="button" id="submitNewPassWord" class="btn btn-success btn-lg btn-block signup-btn" onclick="submitNewPassWordBtn()">Submit</button>
             </div>
         </form>
     </div>
