--- a/functions/header.html
+++ b/functions/header.html
@@ -29,9 +29,7 @@
                 <!--THE NOTIFICAIONS DROPDOWN BOX.-->
                 <div id="notifications" style="z-index: 100;">
                     <h3>Notifications</h3>
-                    <div style="height:300px;">
-
-                    </div>
+                    <div style="height:300px;" id="notifi"> </div>
                     <!-- <div class="seeAll"><a href="#">See All</a></div> -->
                 </div>
             </li>
