--- a/userHome.html
+++ b/userHome.html
@@ -26,7 +26,7 @@
     <script src="./Assets/JS/auth.js"></script>
     <script src="./Assets/JS/notification.js"></script>
     <script src="./Assets/JS/userHome.js"></script>
-    <script src="Assets/JS/nav.js"></script>
+    <script src="./Assets/JS/nav.js"></script>
 
     <!-- <script> var access = sessionStorage.getItem("axs");</script> -->
 
