--- a/orderdetails.html
+++ b/orderdetails.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/custom.sass">
     <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/_variables.scss">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -70,6 +70,9 @@
                             <tbody id="tableBody">
                             </tbody>
                         </table>
+                    </div>
+                    <div class="jumbotron bondBox">
+                        <img id="menuImage" src="" style="height: 100%;width: 100%"/>
                     </div>
                 </div>
                 <div class="col-lg-4 ">
