Fixing reset password

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
         <meta name="google-signin-scope" content="profile email">
         <meta name="google-signin-client_id"
             content="791903473675-ujan66vn97e2ebkgqssu35uvv4elp6vs.apps.googleusercontent.com">
-
-
-        <script src="../Assets/JS/notification.js"></script>
     </div>
 </head>
 
@@ -93,7 +90,7 @@
                     in</button>
             </div>
 
-            <div class="text-center small"><a href="#">Forgot Your password?</a></div>
+            <div class="text-center small"><a href="./submitMail.html">Forgot Your password?</a></div>
             <div class="or-seperator"></div>
 
             <div class="text-center small">Don't have an account? <a href="./signup.html">Sign up</a></div>
