--- a/submitMail.html
+++ b/submitMail.html
@@ -32,8 +32,7 @@
         <meta name="google-signin-scope" content="profile email">
         <meta name="google-signin-client_id"
             content="791903473675-ujan66vn97e2ebkgqssu35uvv4elp6vs.apps.googleusercontent.com">
-        <script src="./Assets/JS/notification.js"></script>
-        <script src="./Assets/JS/forgetPassWord.js"></script>
+        <script src="./Assets/JS/submitMail.js"></script>
 
         
     </div>
@@ -73,12 +72,13 @@
         
             <p class="hint-text">Enter your E-mail</p>
             <div class="form-group">
+                    <div id="msg"><div>
                 <input type="email" class="form-control input-lg" name="email" id="email"
                     placeholder="Enter Your E-mail" required="required">
             </div>
 
             <div class="form-group">
-                <button type="button" id="submitMail" class="btn btn-success btn-lg btn-block signup-btn" onclick="submitMail()">Submit</button>
+                <button type="button" id="submitMail" class="btn btn-success btn-lg btn-block signup-btn" onclick="submitMailBtn()">Submit</button>
             </div>
         </form>
     </div>
